--- a/app.json
+++ b/app.json
@@ -21,12 +21,18 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.theshza.MobileCalculator"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "sdkVersion": "50.0.0"
+    "sdkVersion": "50.0.0",
+    "extra": {
+      "eas": {
+        "projectId": "8d410a10-9085-48cb-aa9d-ac879c5c723a"
+      }
+    }
   },
   "name": "mobilecalculator"
 }
