--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "expo-dev-client": "~3.3.10",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-responsive-fontsize": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
