--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "expo": "^50.0.13",
-    "expo-dev-client": "~3.3.10",
+    "expo-dev-client": "~3.3.11",
     "expo-status-bar": "~1.11.1",
+    "punycode": "^2.3.1",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.6",
     "react-native-responsive-fontsize": "^0.5.1"
   },
   "devDependencies": {
