--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "^50.0.13",
     "expo-dev-client": "~3.3.11",
     "expo-status-bar": "~1.11.1",
+    "gradle": "^1.2.4",
     "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-native": "^0.73.6",
